added lorem ipsum...

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 	<title>temp/dev 9</title>
 </head>
 <body>
+	<p>
+		Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum rerum eveniet voluptates eius a illum odio, porro earum dicta sit iste unde dolorem libero fuga est, corrupti possimus expedita dolor?
+	</p>
 
 </body>
 </html>
